--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,10 @@ jobs:
         run: |
           cd src
           dotnet pack Tinkoff.Visor.Gen.FSharp/Tinkoff.Visor.Gen.FSharp.csproj -c Release  /p:PackageVersion=${{env.VERSION}}
+      - name: pack Tinkoff.Visor.LanguageExt
+        run: |
+          cd src
+          dotnet pack Tinkoff.Visor.LanguageExt/Tinkoff.Visor.LanguageExt.csproj -c Release  /p:PackageVersion=${{env.VERSION}}
       - name: publish
         run: |
           cd src
