--- a/src/Tinkoff.Visor.Gen/Tinkoff.Visor.Gen.csproj
+++ b/src/Tinkoff.Visor.Gen/Tinkoff.Visor.Gen.csproj
@@ -12,11 +12,11 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" PrivateAssets="all" />
+      <PackageReference Include="Namotion.Reflection" Version="2.1.2" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true"
-              PackagePath="analyzers/dotnet/cs" Visible="false" />
+        <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
     </ItemGroup>
 
 </Project>
