Implement ability to generate chained optics

--- a/src/Tinkoff.Visor.Gen.Tests/Tinkoff.Visor.Gen.Tests.csproj
+++ b/src/Tinkoff.Visor.Gen.Tests/Tinkoff.Visor.Gen.Tests.csproj
@@ -24,4 +24,9 @@
       <ProjectReference Include="..\Tinkoff.Visor.Gen\Tinkoff.Visor.Gen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>.\bin\Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
+
 </Project>
